--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "full page landing page example",
   "main": "index.js",
+  "homepage": "https://cristaldotgema.github.io/landing_page",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +15,8 @@
     "gulp": "^3.9.1",
     "gulp-imagemin": "^4.1.0",
     "gulp-sass": "^4.0.1"
+  },
+  "dependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
